# CovidVaccinationPipeline

./: .gitignore  README.md  dbt_project.yml  pyproject.toml  requirements.txt  setup.py
dbt/macros/: custom_utils.sql
dbt/models/core/: dim_demographics.sql  dim_time.sql  fact_vaccine.sql
dbt/models/staging/: schema.yml  stg_NC2021_vaccine.sql  stg_NY2021_vaccine.sql
experiments/: etl_try.py
flows/: gcs_to_bq.py  parent_flow_gcs_to_bq-deployment.yaml  parent_flow_web_to_gcs-deployment.yaml  web_to_gcs.py
pipeline/: extract.py
venv_DataTalks_DE/Scripts/: activate  activate.bat
